--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,8 @@ yarn-error.*
 *.tsbuildinfo
 
 app-example
+
+teamup-4f142-firebase-adminsdk-fbsvc-d29d7dba8a.json
+google-services.json
+
+android
