--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
+    "@gorhom/bottom-sheet": "^5.1.2",
     "@react-native-async-storage/async-storage": "^1.24.0",
     "@react-native-firebase/analytics": "^21.12.0",
     "@react-native-firebase/app": "^21.12.0",
@@ -29,7 +30,6 @@
     "@react-native-masked-view/masked-view": "^0.2.9",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.15",
-    "@sentry/react-native": "^6.9.1",
     "core-js": "^3.41.0",
     "eslint": "^9.22.0",
     "expo": "~52.0.38",
@@ -86,7 +86,6 @@
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5",
     "text-encoding": "^0.7.0",
-    "undefined": "\\",
     "web-streams-polyfill": "^4.1.0"
   },
   "devDependencies": {
