--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@react-native-firebase/app": "^21.12.0",
     "@react-native-firebase/auth": "^21.12.0",
     "@react-native-firebase/crashlytics": "^21.12.0",
+    "@react-native-firebase/database": "^21.12.0",
     "@react-native-firebase/firestore": "^21.12.0",
     "@react-native-firebase/functions": "^21.12.0",
     "@react-native-firebase/storage": "^21.12.0",
