--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@react-native-masked-view/masked-view": "^0.2.9",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.15",
+    "@tanstack/react-query": "^5.69.0",
     "core-js": "^3.41.0",
     "eslint": "^9.22.0",
     "expo": "~52.0.38",
